# rust_shell

./: Cargo.toml  README.md
libs/app/: Cargo.toml
libs/app/src/: lib.rs
libs/shell/: Cargo.toml
libs/shell/src/: lib.rs
libs/ui/: Cargo.toml
libs/ui/src/: lib.rs
src/: main.rs
