[package]
name = "lib_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
tokio = { version = "1.19.2", features = ["full"] }
futures-lite = { version = "1.12.0" }
async-process = { version = "1.4.0" }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }

lib_app = { path = "../app" }
lib_ui = { path = "../ui" }
